# spr_vision_try

./: .gitignore  CMakeLists.txt  autostart.sh  compile_commands.json  readme.md
calibration/: calibrate_camera.cpp  calibrate_handeye.cpp  calibrate_robotworld_handeye.cpp  capture.cpp
configs/: ascento.yaml  calibration.yaml  camera.yaml  demo.yaml  dual_camera.yaml  dual_camera_aux.yaml  dual_camera_main.yaml  example.yaml  mvs.yaml  sentry.yaml  standard3.yaml  standard4.yaml  uav.yaml
debug/: CMakeLists.txt  usage_example.cpp  web_debugger.cpp  web_debugger.hpp
debug/static/: index.html
io/: CMakeLists.txt  camera.cpp  camera.hpp  socketcan.hpp
io/gimbal/: gimbal.cpp  gimbal.hpp
io/hikrobot/: hikrobot.hpp
io/mindvision/: mindvision.hpp
src/: auto_aim_debug_hero_mpc.cpp  auto_aim_debug_mpc.cpp  mt_dual_camera.cpp
tasks/auto_aim/: CMakeLists.txt  aimer.hpp  armor.hpp  aux_solver.cpp  aux_solver.hpp  detector.cpp  target.cpp  target.hpp  tracker.cpp
tasks/auto_aim/multithread/: mt_detector.cpp  mt_detector.hpp
tasks/auto_aim/planner/: planner_hero.cpp  planner_hero.hpp
tasks/auto_buff/: CMakeLists.txt  buff_aimer.cpp
tasks/omniperception/: CMakeLists.txt
tests/: auto_aim_test.cpp  camera_recorder_test.cpp  handeye_test.cpp  mt_dual_camera_mock_gimbal_test.cpp  mt_dual_camera_serial_test.cpp  recorder_test.cpp
tools/: CMakeLists.txt  plotter.cpp  thread_safe_queue.hpp  trajectory_hero.cpp  trajectory_hero.hpp  trajectory_hero.md  yaml.hpp
